fixed the margins and spacing issues, as well as added a gradient and shadow to the pictures for a more professional look

--- a/res/style.css
+++ b/res/style.css
@@ -3,17 +3,43 @@
 	width: 100%;
 }
 
+#innerWrapper{
+	margin: auto;
+}
+
 /* container for the images */
 .gridBox{
 	position: relative;
 	float:left;
-	width : 46%;
-	margin: 10px;
 	max-width : 100%;
 	min-width : 100px;
-	padding: 5px;
 	background-color: #a0a0a0;
-	border-radius: 12px;
+	padding-top: 15px;
+	padding-bottom: 25px;
+	padding-left: 5px;
+	padding-right:5px;
+
+/* IE10 Consumer Preview */ 
+background-image: -ms-linear-gradient(top left, #999999 0%, #5C5959 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-linear-gradient(top left, #999999 0%, #5C5959 100%);
+
+/* Opera */ 
+background-image: -o-linear-gradient(top left, #999999 0%, #5C5959 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #999999), color-stop(1, #5C5959));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-linear-gradient(top left, #999999 0%, #5C5959 100%);
+
+/* W3C Markup, IE10 Release Preview */ 
+background-image: linear-gradient(to bottom right, #999999 0%, #5C5959 100%);
+
+	margin: 2px;
+	
+	border-radius: 15px;
 	overflow: hidden;
 	text-align: center;
 
@@ -25,7 +51,9 @@
 	max-width:100%;
 	max-height:100%;
 	vertical-align: middle;
-
+	border: none;
+	box-shadow: 5px 5px 5px #333;
+	
 
 }
 
@@ -36,9 +64,8 @@
 	width: 100%;
 	bottom: 0px;
 	left: 0px;
-	padding-left: 20px;
 	color: white;
-	background-color: rgba(0, 0, 0, 0.75);
+	background-color: black;
 	line-height: 20px;
 
 }
@@ -51,7 +78,7 @@
 	left: 0px;
 	color: white;
 	text-align: center;
-	background-color: rgba(0, 0, 0, 0.75);
+	background-color: black;
 	line-height: 20px;
 }
 
@@ -65,5 +92,7 @@
 	color: red;
 	background-color: rgba(0, 0, 0, 0.75);
 }
+
+
 
 
